--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.1",
-    "hono": "^4.6.3"
+    "hono": "^4.6.3",
+    "kysely": "^0.27.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
