--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "@hono/node-server": "^1.13.1",
     "hono": "^4.6.3",
-    "kysely": "^0.27.4"
+    "kysely": "^0.27.4",
+    "mysql2": "^3.11.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "kysely-codegen": "^0.16.8",
     "tsx": "^4.7.1"
   }
 }
