--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.1",
+    "@hono/zod-validator": "^0.3.0",
     "dotenv": "^16.4.5",
     "hono": "^4.6.3",
     "kysely": "^0.27.4",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "ulid": "^2.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
