--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "hono-todo-app",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@hono/node-server": "^1.13.1",
-    "@hono/zod-validator": "^0.3.0",
-    "dotenv": "^16.4.5",
-    "hono": "^4.6.3",
-    "kysely": "^0.27.4",
-    "mysql2": "^3.11.3",
+    "@hono/zod-validator": "^0.2.1",
+    "hono": "^4.2.4",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swr": "^2.2.4",
     "ulid": "^2.3.0",
-    "zod": "^3.23.8"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "kysely-codegen": "^0.16.8",
-    "tsx": "^4.7.1"
+    "@types/node": "20.14.4",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "typescript": "^5.4.5"
   }
 }
