--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.1",
+    "dotenv": "^16.4.5",
     "hono": "^4.2.4",
+    "kysely": "^0.27.4",
+    "mysql2": "^3.11.3",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
