--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.4.5",
     "hono": "^4.2.4",
     "kysely": "^0.27.4",
+    "kysely-codegen": "^0.17.0",
     "mysql2": "^3.11.3",
     "next": "^14.0.4",
     "react": "^18.2.0",
