--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,3 +8,9 @@ jobs:
     steps:
     - name: Hello world
       run: echo Hello, world!
+      
+    - name: Super-linter
+      uses: super-linter/super-linter@v7.2.1 # x-release-please-version
+      env:
+        # To report GitHub Actions status checks
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
