--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,14 +1,15 @@
 name: hello
 on: 
-  schedule:
-    - cron: '*/15 * * * *'
+  push:
+    branches:
+      - main
 jobs:
   hello:
     runs-on: ubuntu-latest
     steps:
     - name: Hello world
       run: echo Hello, world!
-      
+
     - name: Super-linter
       uses: super-linter/super-linter@v7.2.1 # x-release-please-version
       env:
