--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -13,3 +13,12 @@ jobs:
         HELLO: ${{ vars.HELLO }}
         HELLO_SECRET: ${{ secrets.HELLO_SECRET }}
       run: echo Hello, world! "$HELLO" "$HELLO_SECRET"
+
+    - name: Setup Go Runtime
+      uses: actions/setup-go@v5
+      id: setup-go
+      with:
+        go-version: 1.17
+
+    - name: check cache hits
+      run: echo "Cache hit ${{ steps.setup-go.outputs.cache-hit }}"
