--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,7 +8,11 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-  
+defaults:
+  run:
+    shell: bash
+    working-directory: pages
+
 jobs:
   hello:
     runs-on: ubuntu-latest
