--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -16,6 +16,7 @@ defaults:
 jobs:
   hello:
     runs-on: ubuntu-latest
+    timeout-minutes: 1
     steps:
     - uses: actions/checkout@v4
     - name: Hello world
