--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -25,6 +25,9 @@ jobs:
         HELLO_SECRET: ${{ secrets.HELLO_SECRET }}
       run: echo Hello, world! "$HELLO" "$HELLO_SECRET"
 
+    - name: sleep
+      run: sleep 60
+
     - name: Setup Go Runtime
       uses: actions/setup-go@v5
       id: setup-go
