--- a/.github/workflows/parallel.yml
+++ b/.github/workflows/parallel.yml
@@ -12,12 +12,19 @@ jobs:
   first:
     runs-on: ubuntu-latest
     steps:
-      - run : sleep 5 && echo "first job"
+      - name: first-steps-1
+        run : sleep 5 && echo "first job-1"
+      - name: first-steps-2
+        run : sleep 5 && echo "first job-2"
   second:
     runs-on: ubuntu-latest
+    needs: first
     steps:
-      - run : sleep 10 && echo "second job"
+      - name: second-steps
+        run : sleep 10 && echo "second job"
   third:
     runs-on: ubuntu-latest
+    needs: second
     steps:
-      - run : sleep 20 && echo "third job"
+      - name: third-steps
+        run : sleep 20 && echo "third job"
