--- a/.github/workflows/share-job-data.yml
+++ b/.github/workflows/share-job-data.yml
@@ -9,27 +9,35 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  before:
+  workflow:
     runs-on: ubuntu-latest
     steps:
-      - name: before-steps
-        id: before
-        run : echo "echo result=Hello, world!" >> "$GITHUB_OUTPUT"
-    outputs:
-      result: ${{ steps.before.outputs.result }}
-  now:
-    runs-on: ubuntu-latest
-    steps:
-      - name: now-steps
-        id: now
-        run : echo "echo result=This is a pen." >> "$GITHUB_OUTPUT"
-    outputs:
-      result: ${{ steps.now.outputs.result }}
-  after:
-    runs-on: ubuntu-latest
-    needs: [before,now]
-    steps:
-      - name: after-steps
-        run: |
-          echo "echo before=${{ needs.before.outputs.result }}"
-          echo "echo now=${{ needs.now.outputs.result }}"
+      - name: Checkout Source code
+        uses: actions/checkout@v4
+      before:
+        runs-on: ubuntu-latest
+        steps:
+          - name: before-steps
+            id: before
+            run : echo "echo result=Hello, world!" >> "$GITHUB_OUTPUT"
+        outputs:
+          result: ${{ steps.before.outputs.result }}
+      now:
+        runs-on: ubuntu-latest
+        steps:
+          - name: now-steps
+            id: now
+            run : echo "echo result=This is a pen." >> "$GITHUB_OUTPUT"
+        outputs:
+          result: ${{ steps.now.outputs.result }}
+      after:
+        runs-on: ubuntu-latest
+        needs: [before,now]
+        steps:
+          - name: after-steps
+            env:
+              BEFORE: ${{ needs.before.outputs.result }}
+              NOW: ${{ needs.now.outputs.result }}
+            run: |
+              echo "echo before=${ BEFORE }"
+              echo "echo now=${ NOW}"
